# disk_cleaner

./: .gitattributes  .gitignore  README.md  pyproject.toml
docs/: execution_plan.md  module_analysis.md  requirements.md  system_design.md  work_items.md
docs/modules/configuration_manager/design/: design.md
docs/modules/configuration_manager/requirements/: requirements.md
docs/modules/file_system_scanner/design/: design.md
docs/modules/file_system_scanner/requirements/: requirements.md
src/disk_cleaner/: __init__.py  config.py  file_scanner.py
tests/: test_config.py  test_file_scanner.py  test_version.py
