[project]
name = "disk-cleaner"
version = "0.1.0"
description = "A tool to clean up and optimize disk space on Windows"
authors = [
    {name = "Your Name",email = "your.email@example.com"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "rich (>=14.1.0,<15.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "threadpoolctl (>=3.6.0,<4.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-asyncio (>=1.1.0,<2.0.0)",
    "pytest-cov (>=6.2.1,<7.0.0)",
    "pytest-mock (>=3.14.1,<4.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "mypy (>=1.17.1,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
